@@ -31,6 +31,7 @@ Version 1.0.8.8
      * Properly protect Regexps against GeSHi Black Magic in Matlab (BenBE)
      * Added support for Block Comments in PowerShell (BenBE)
      * Added some keywords for VB; split into multiple groups (leejkennedy, BenBE)
+     * Basic Heredoc Support for Ruby (BenBE)
 Version 1.0.8.7
   -  Added language files
      * Autoconf (Mihai Vasilian)
